--- a/main/conf/locale/en/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/en/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-11-21 11:12+0100\n"
+"POT-Creation-Date: 2014-12-05 11:34+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,101 +16,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: geography/static/dist/js/blind-maps.min.js:244
-#: geography/static/dist/js/blind-maps.min.js:271
-#: geography/static/dist/js/blind-maps.min.js:414
-#: geography/static/dist/js/blind-maps.min.js:496
-#: geography/static/dist/js/blind-maps.min.js:1953
-#: geography/static/js/controllers.js:82
-#: geography/static/js/controllers.js:109
-#: geography/static/js/controllers.js:252
-#: geography/static/js/controllers.js:334
-#: geography/static/js/directives.js:357
-msgid "V aplikaci bohužel nastala chyba."
-msgstr "Unfortunately there has been an error in the app."
-
-#: geography/static/dist/js/blind-maps.min.js:518
-#: geography/static/js/services.js:14
-msgid "USA"
-msgstr "U.S."
-
-#: geography/static/dist/js/blind-maps.min.js:519
-#: geography/static/js/services.js:15
-msgid "Svět"
-msgstr "World"
-
-#: geography/static/dist/js/blind-maps.min.js:524
-#: geography/static/js/services.js:20
-msgid "Politická mapa"
-msgstr "Political map"
-
-#: geography/static/dist/js/blind-maps.min.js:537
-#: geography/static/js/services.js:33
-msgid "Vodstvo"
-msgstr "Water"
-
-#: geography/static/dist/js/blind-maps.min.js:542
-#: geography/static/js/services.js:38
-msgid "Povrch"
-msgstr "Surface"
-
-#: geography/static/dist/js/blind-maps.min.js:827
-#: geography/static/js/services.js:323
-msgid "O prjektu"
-msgstr "About"
-
-#: geography/static/dist/js/blind-maps.min.js:828
-#: geography/static/hack/tpl/overview_tpl.js:1
-#: geography/static/js/services.js:324
-msgid "Přehled map"
-msgstr "Maps overview"
-
-#: geography/static/dist/js/blind-maps.min.js:1318
-#: geography/static/dist/js/blind-maps.min.js:1614
-#: geography/static/js/directives.js:18 geography/static/js/map.js:270
-msgid "Odhad znalosti"
-msgstr "Knowledge estimate"
-
-#: geography/static/dist/js/blind-maps.min.js:1324
-#: geography/static/js/map.js:276
-msgid "Počet obyvatel"
-msgstr "Population"
-
-#: geography/static/dist/js/blind-maps.min.js:1331
-#: geography/static/js/map.js:283
-msgid "Neprocvičováno"
-msgstr "Unpracticed"
-
-#: geography/static/dist/js/blind-maps.min.js:1746
-#: geography/static/js/directives.js:150
-msgid "Naučeno"
-msgstr "Learned"
-
-#: geography/static/dist/js/blind-maps.min.js:1753
-#: geography/static/js/directives.js:157
-msgid "Procvičováno"
-msgstr "Practiced"
-
-#: geography/static/dist/js/blind-maps.min.js:1772
-#: geography/static/js/directives.js:176
-msgid "Aktuální úroveň"
-msgstr "Current level"
-
-#: geography/static/dist/js/blind-maps.min.js:1777
-#: geography/static/js/directives.js:181
-msgid "bodů do příští úrovně"
-msgstr "points to the next level"
-
-#: geography/static/dist/js/blind-maps.min.js:1784
-#: geography/static/js/directives.js:188
-msgid "Příští úroveň"
-msgstr "Next level"
-
-#: geography/static/dist/js/blind-maps.min.js:1946
-#: geography/static/js/directives.js:350
-msgid "Cíl byl vytvořen"
-msgstr "Goal has been created"
 
 #: geography/static/hack/tpl/confused_tpl.js:1
 msgid "Moje časté chyby"
@@ -266,6 +171,11 @@ msgstr "My knowledge"
 msgid "Průměrný nový uživatel"
 msgstr "Average new user"
 
+#: geography/static/hack/tpl/overview_tpl.js:1
+#: geography/static/js/services.js:330
+msgid "Přehled map"
+msgstr "Maps overview"
+
 #: geography/static/hack/tpl/personal-goals_tpl.js:1
 msgid "Osobní cíle"
 msgstr "Personal goals"
@@ -295,8 +205,8 @@ msgid "Dnes již není třeba procvičovat"
 msgstr "No need to practice anymore today"
 
 #: geography/static/hack/tpl/personal-goals_tpl.js:8
-msgid "Odstranit cíl - lze jen v den jeho vytvoření"
-msgstr "Remove goal - only possible on the day of its creation"
+msgid "Odstranit cíl"
+msgstr "Remove goal"
 
 #: geography/static/hack/tpl/practice_tpl.js:1
 msgid "Vybráno"
@@ -361,6 +271,74 @@ msgstr "Profile address"
 #: geography/static/hack/tpl/view_tpl.js:3
 msgid "Zde zatím nebylo nic procvičováno."
 msgstr "Nothing has been practiced here."
+
+#: geography/static/js/controllers.js:53
+#: geography/static/js/controllers.js:196
+#: geography/static/js/controllers.js:278
+#: geography/static/js/directives.js:357 proso_feedback/static/js/app.js:54
+#: proso_feedback/static/js/app.js.c:96
+msgid "V aplikaci bohužel nastala chyba."
+msgstr "Unfortunately there has been an error in the app."
+
+#: geography/static/js/directives.js:18 geography/static/js/map.js:270
+msgid "Odhad znalosti"
+msgstr "Knowledge estimate"
+
+#: geography/static/js/directives.js:150
+msgid "Naučeno"
+msgstr "Learned"
+
+#: geography/static/js/directives.js:157
+msgid "Procvičováno"
+msgstr "Practiced"
+
+#: geography/static/js/directives.js:176
+msgid "Aktuální úroveň"
+msgstr "Current level"
+
+#: geography/static/js/directives.js:181
+msgid "bodů do příští úrovně"
+msgstr "points to the next level"
+
+#: geography/static/js/directives.js:188
+msgid "Příští úroveň"
+msgstr "Next level"
+
+#: geography/static/js/directives.js:350
+msgid "Cíl byl vytvořen"
+msgstr "Goal has been created"
+
+#: geography/static/js/map.js:276
+msgid "Počet obyvatel"
+msgstr "Population"
+
+#: geography/static/js/map.js:283
+msgid "Neprocvičováno"
+msgstr "Unpracticed"
+
+#: geography/static/js/services.js:14
+msgid "USA"
+msgstr "U.S."
+
+#: geography/static/js/services.js:15
+msgid "Svět"
+msgstr "World"
+
+#: geography/static/js/services.js:20
+msgid "Politická mapa"
+msgstr "Political map"
+
+#: geography/static/js/services.js:33
+msgid "Vodstvo"
+msgstr "Water"
+
+#: geography/static/js/services.js:38
+msgid "Povrch"
+msgstr "Surface"
+
+#: geography/static/js/services.js:329
+msgid "O prjektu"
+msgstr "About"
 
 #~ msgid "Státy světa"
 #~ msgstr "World states"
