--- a/main/conf/locale/de/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/de/LC_MESSAGES/djangojs.po
@@ -1,9 +1,9 @@
-#. extracted from djangojs.po.csv
+#. extracted from djangojs.po2.csv
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-04 07:15+0200\n"
+"POT-Creation-Date: 2015-06-19 10:31+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -14,11 +14,11 @@ msgstr ""
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fconfirm_modal.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fconfirm_modal.js%3A1
 msgid "Ne"
-msgstr "Ja"
+msgstr "Nein"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fconfirm_modal.js%3A2+geography%2Fstatic%2Fhack%2Ftpl%2Fconfirm_modal.js%3A2
 msgid "Ano"
-msgstr "Nein"
+msgstr "Ja"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fconfused_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fconfused_tpl.js%3A1
 msgid "Moje časté chyby"
@@ -74,8 +74,7 @@ msgstr "Flüsse Afrikas"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A9+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A9
 msgid "Chcete jinou? Podívejte se na"
-msgstr ""
-"Möchten Sie eine andere Landkarte? Schauen Sie die weiteren Landkarten an"
+msgstr "Möchten Sie eine andere? Schauen Sie sich weiteren Landkarten an"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A10+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A10
 msgid "další mapy"
@@ -87,54 +86,55 @@ msgstr "Wie funktioniert das?"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A14+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A14
 msgid "Zeměpis hrou"
-msgstr "Erdkunde spielerisch"
+msgstr "Geograpie spielerisch lernen"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A16+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A16
 msgid "Zeměpis hrou - text"
 msgstr ""
 "Testen Sie Ihre Kenntnisse in Geographie und lernen Sie mit Spiel und Spaß. "
 "In der aktuellen Version spielen Sie alleine, bzw. gegen das Spielsystem. "
-"Schaffen Sie die ganze Landkarte Europas? das ganze Tschechien? Und die "
-"ganze Welt? grün zu machen?"
+"Schaffen Sie es ganz Tschechien, Europa oder sogar die ganze Welt grün zu "
+"färben?"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A18+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A18
 msgid "Adaptabilní procvičování"
-msgstr "Anpassungsfähiges Üben"
+msgstr "Adaptives Üben"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A20+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A20
 msgid "Adaptabilní procvičování - text"
 msgstr ""
-"Jede stumme Karte bietet ein anpassungsfähiges Üben an - je nach dem Sie "
-"Kenntnisse haben, die Apps wählt die Fragekategorien (offen, Multi-Choise "
-"Fragen) und die Wiederholungsfrequenz. Die Apps legt uns dann die Staaten "
-"so vor, deren Üben ist es für Ihnen am efektivsten."
+"Jede stumme Karte bietet adaptives Üben an - je nach dem welche Kenntnisse "
+"sie schon besitzen, wählt die App die für sie am besten geeigneste "
+"Fragekategorie und Wiederholungsfrequenz aus. Die App stellt ihnen dann die "
+"Fragen, die für sie am effektivsten sind."
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A21+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A21
 msgid "Ukázka procvičování"
-msgstr "Vorschau zum Üben"
+msgstr "Vorschau der Übungen"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A23+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A23
 msgid "Specializovaný systém"
-msgstr "Spezielisiertes System"
+msgstr "Spezialisiertes System"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A25+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A25
 msgid "Specializovaný systém - text"
 msgstr ""
-"Stumme Karten zu üben, das bietet auch eine andere Reihe von "
-"Unterrichtssystemen an, die  beschäftigen sich jedoch  meistens  mit vielen "
-"Teilbereichen. Unser System konzetriert sich nur auf stumme Karten, aus "
-"diesem Grunde ist es zum Erlernen in diesem Bereich optimiert."
+"Die Möglichkeit stumme Karten zu üben bieten auch andere Lernwebsiten an. "
+"Unser System konzentriert sich aber nur auf stumme Karten und ist aus diesem "
+"Grunde besonders auf diese optimiert. Damit wir ihnen die beste "
+"Nutzerehrfahrung bieten können und das lernen für sie ein Kinderspiel wird."
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A27+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A27
 msgid "Vizualizace znalostí"
-msgstr ""
+msgstr "Visualisierung ihrer Kenntnisse"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A28+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A28
 msgid "Vizualizace znalostí - text"
 msgstr ""
-"Aufgrund der Antworten schätzt das Spielsystem ein, wie gut Sie verschiedene "
-"Staaten und Bundesländer kennen, und es zeigt die Karte ihrer Kenntnisse, "
-"was  dazu hilft, Ihnen klar zu machen, was Sie eigentlich schon können."
+"Aufgrund der Antworten, schätzt das Spielsystem ihre Kenntnisse über die "
+"verschiedene Staaten und Bundesländer ein, und veranschaulicht es auf Karte "
+"der Kenntnisse. Dies soll ihnen helfen sich darüber im Klaren zu sein, "
+"welches Wissen Sie bereits besitzen."
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A29+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A29
 msgid "Ukázka mapy znalostí"
@@ -142,19 +142,19 @@ msgstr "Vorschau zur Karte der Kennnisse"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A31+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A31
 msgid "Učení z dat"
-msgstr "Erlernen aus Daten"
+msgstr "Lernen aus Daten"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fhomepage.js%3A33+geography%2Fstatic%2Fhack%2Ftpl%2Fhomepage.js%3A33
 msgid "Učení z dat - text"
 msgstr ""
-"Die Apps zieht  aus Daten von allen Benutzer die Schlusfolgeungen. Die "
-"Fragenauswahl geht von diesen Daten, nicht von den Kenntnissen eines "
-"Experten in Geografie hervor, der \"weiß\", ob es schwieriger Kenia oder "
-"Nigerien zu erkennen ist."
+"Die App lernt aus den Daten aller Benutzer. Die Auswahl der Fragen basiert "
+"auf diesen Daten und nicht auf den Kenntnissen eines Geographieexperten. Es "
+"erkennt ob es allgemein schwieriger ist Kenia oder Nigerien zu erkennen, und "
+"passt die Fragen dazu an."
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Flogin_modal.js%3A1+geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Flogin_modal.js%3A8+geography%2Fstatic%2Fhack%2Ftpl%2Flogin_modal.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Flogin_modal.js%3A8
 msgid "Přihlásit se"
-msgstr "Anmeldung"
+msgstr "Anmelden"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Flogin_modal.js%3A2+geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fsignup_modal.js%3A4+geography%2Fstatic%2Fhack%2Ftpl%2Flogin_modal.js%3A2+geography%2Fstatic%2Fhack%2Ftpl%2Fsignin_modal.js%3A5+geography%2Fstatic%2Fhack%2Ftpl%2Fsignup_modal.js%3A4
 msgid "přes Google"
@@ -174,7 +174,7 @@ msgstr "Passwort"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Flogin_modal.js%3A10+geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fsignup_modal.js%3A12+geography%2Fstatic%2Fhack%2Ftpl%2Flogin_modal.js%3A10+geography%2Fstatic%2Fhack%2Ftpl%2Fsignup_modal.js%3A12
 msgid "Registrovat se"
-msgstr "Registrieren Sie sich"
+msgstr "Registrieren"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fmap_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fmap_tpl.js%3A1
 msgid "Moje znalosti"
@@ -198,15 +198,15 @@ msgstr "Ich weiß nicht"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A3+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A3
 msgid "Pokračovat"
-msgstr "weitergehen"
+msgstr "fortfahren"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A4+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A4
 msgid "Znovu zvýraznit"
-msgstr "wieder markieren"
+msgstr "erneut anzeigen"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A5+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A5
 msgid "Úspěšnost"
-msgstr "Erfolgergebnis"
+msgstr "Erfolge"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A6+geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A6
 msgid "Osobní cíle"
@@ -214,7 +214,7 @@ msgstr "Persönliche Ziele"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A7+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A7
 msgid "Znovu procvičovat"
-msgstr "nochmal üben"
+msgstr "erneut üben"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fpractice_tpl.js%3A8+geography%2Fstatic%2Fhack%2Ftpl%2Fpractice_tpl.js%3A8
 msgid "Mapa znalostí"
@@ -247,8 +247,8 @@ msgstr "Passwort wiederholen"
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fsignup_modal.js%3A13+geography%2Fstatic%2Fhack%2Ftpl%2Fsignup_modal.js%3A13
 msgid "Registrace proběhla úspěšně. Můžete pokračovat v používání aplikace."
 msgstr ""
-"Die Registrierung wurde erfolgreich durgeführt. Sie können weiter gehen, "
-"um die Apps zu nutzen."
+"Die Registrierung wurde erfolgreich durgeführt. Sie können fortfahren, "
+"um die App zu nutzen."
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A1
 msgid "Upravit profil"
@@ -260,7 +260,7 @@ msgstr "Punkte"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A3+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A3
 msgid "přibývají za každou správnou odpověď"
-msgstr "ändern sich bei der richtigen Lösung"
+msgstr "ändern sich mit jeder richtigen Antwort"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A4+geography%2Fstatic%2Fhack%2Ftpl%2Fedit-profile_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A4
 msgid "Jméno"
@@ -272,7 +272,7 @@ msgstr "Name"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A7+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A7
 msgid "Poslat mi email při neplnění cílů"
-msgstr "Eine E-Mail schicken, wenn man die Ziele nich erreicht"
+msgstr "Mir eine E-Mail schicken, wenn ich meine Ziele nicht erreicht habe"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A8+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A8
 msgid "Uložit"
@@ -284,11 +284,11 @@ msgstr "Abbrechen"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A10+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A10
 msgid "Přehled znalostí uživatele"
-msgstr "Übersicht über Kenntnisse der Benutzer"
+msgstr "Übersicht über die Kenntnisse des Benutzers"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A11+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A11
 msgid "Sdílej svůj profil"
-msgstr "Teilen Sie Ihren Profil mit."
+msgstr "Teilen Sie Ihr Profil mit"
 
 #: geography%2Fstatic%2Fhack%2Fgeography%2Fstatic%2Ftpl%2Fuser_tpl.js%3A12+geography%2Fstatic%2Fhack%2Ftpl%2Fuser_tpl.js%3A12
 msgid "Adresa profilu"
@@ -305,8 +305,8 @@ msgstr "Schreiben Sie uns"
 #: geography/static/hack/proso_feedback/static/tpl/feedback_modal.js:2
 msgid "Feedback text label"
 msgstr ""
-"Haben Sie einen Fehler in der App gefunden? Haben Sie eine Idee, wie man das "
-"besser machen könnte? Oder einen anderen Tipp oder ein Komentar? Wir "
+"Haben Sie einen Fehler in der App gefunden? Haben Sie eine Idee, wie man "
+"diese App besser machen könnte? Oder einen anderen Tipp oder Kommentar? Wir "
 "interessieren uns für alles, was Sie uns mitteilen wollen."
 
 #: geography/static/hack/proso_feedback/static/tpl/feedback_modal.js:3
@@ -327,7 +327,8 @@ msgstr "Wie schwierig sind die gestellten Fragen?"
 
 #: geography/static/hack/proso_feedback/static/tpl/rating_modal.js:2
 msgid "Svou odpovědí nám pomáháte přizpůsobovat obtížnost otázek."
-msgstr "Mit ihrer Atwort helfen Sie uns die der Fragen anzupassen"
+msgstr ""
+"Mit ihrer Antwort helfen sie uns die Schwierigkeit der Fragen anzupassen"
 
 #: geography/static/hack/proso_feedback/static/tpl/rating_modal.js:3
 msgid "Příliš lehké"
@@ -335,7 +336,7 @@ msgstr "zu einfach"
 
 #: geography/static/hack/proso_feedback/static/tpl/rating_modal.js:4
 msgid "Tak akorát"
-msgstr "so lala"
+msgstr "genau richtig"
 
 #: geography/static/hack/proso_feedback/static/tpl/rating_modal.js:5
 msgid "Příliš těžké"
@@ -343,7 +344,7 @@ msgstr "zu schwierig"
 
 #: geography/static/hack/proso_feedback/static/tpl/rating_modal.js:6
 msgid "Nevím / nechci odpovídat"
-msgstr "ich weiß nicht/ ich will nicht darauf antworten"
+msgstr "ich weiß nicht/ ich will nicht antworten"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fgoal-progress_tpl.js%3A1+geography%2Fstatic%2Fhack%2Ftpl%2Fgoal-progress_tpl.js%3A1
 msgid "Postup plnění cíle"
@@ -359,35 +360,33 @@ msgstr "heutiges unerfülltes Üben"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fgoal-progress_tpl.js%3A4+geography%2Fstatic%2Fhack%2Ftpl%2Fgoal-progress_tpl.js%3A4
 msgid "Více než den nesplněného procvičování"
-msgstr "Mehr als ein Tag des unerfülten Übens"
+msgstr "Mehr als ein Tag nicht geübt"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A2+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A2
 msgid "Chceš se naučit některou mapu do určitého data?"
-msgstr "Möchtest du eine Karte bis zum bestimmeten Zeitpunkt erlernen?"
+msgstr "Möchtest du eine Karte bis zu einem bestimmeten Zeitpunkt erlernen?"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A3+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A3
 msgid ""
 "Nastav si cíl a systém ti podle tvých aktuálních znalostí rozloží "
 "procvičování na jednotlivé dny."
-msgstr ""
-"Geben Sie das Ziel vor und das Spielsystem bietet Ihnen aufgrund ihrer "
-"aktuellen Kenntnisse das Üben  für einzelne Tage an."
+msgstr "Geben Sie das Ziel vor und das Spielsystem bietet Ihnen ."
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A4+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A4
 msgid "Vytvořit cíl"
-msgstr "Ziel erstellen, vorgeben"
+msgstr "Ziel setzen"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A5+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A5
 msgid "Žádné cíle zatím nebyly stanoveny"
-msgstr "keine Ziele wurde eingegeben"
+msgstr "Es wurden keine Ziele gesetzt"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A6+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A6
 msgid "Dnes již není třeba procvičovat"
-msgstr "Heute ist es nicht nötig zu üben"
+msgstr "Heute ist es nicht mehr nötig zu üben"
 
 #: geography%2Fstatic%2Fhack%2Fproso_goals%2Fstatic%2Ftpl%2Fpersonal-goals_tpl.js%3A8+geography%2Fstatic%2Fhack%2Ftpl%2Fpersonal-goals_tpl.js%3A8
 msgid "Odstranit cíl"
-msgstr "Ziel beseitigen"
+msgstr "Ziel entfernen"
 
 #: geography%2Fstatic%2Fjs%2Fdirectives.js%3A18+geography%2Fstatic%2Fjs%2Fmap.js%3A270
 msgid "Odhad znalosti"
@@ -403,19 +402,19 @@ msgstr "geübt"
 
 #: geography/static/js/directives.js:149
 msgid "Aktuální úroveň"
-msgstr "Aktuelles Spiellevel"
+msgstr "Aktuelles Level"
 
 #: geography/static/js/directives.js:154
 msgid "bodů do příští úrovně"
-msgstr "Punkte bis zum nächsten Spiellevel"
+msgstr "Punkte bis zum nächsten Level"
 
 #: geography/static/js/directives.js:161
 msgid "Příští úroveň"
-msgstr "Nächstes Spiellevel"
+msgstr "Nächstes Level"
 
 #: geography%2Fstatic%2Fjs%2Fdirectives.js%3A265+proso_auth%2Fstatic%2Fjs%2Fapp.js%3A33+proso_auth%2Fstatic%2Fjs%2Fapp.js.c%3A78+proso_auth%2Fstatic%2Fjs%2Fapp.js%3A133+proso_feedback%2Fstatic%2Fjs%2Fapp.js%3A54+proso_feedback%2Fstatic%2Fjs%2Fapp.js.c%3A96+proso_goals%2Fstatic%2Fjs%2Fapp.js%3A119
 msgid "V aplikaci bohužel nastala chyba."
-msgstr "In der Apps kam leider zum Fehler."
+msgstr "Leider ist ein Fehler aufgetreten"
 
 #: geography/static/js/map.js:276
 msgid "Počet obyvatel"
@@ -435,7 +434,7 @@ msgstr "Welt"
 
 #: geography/static/js/services.js:20
 msgid "Politická mapa"
-msgstr "Politische Landkarte"
+msgstr "Politische Karte"
 
 #: geography/static/js/services.js:33
 msgid "Vodstvo"
@@ -451,7 +450,7 @@ msgstr "Über das Projekt"
 
 #: geography/static/js/services.js:415
 msgid "Opravdu chcete cíl smazat?"
-msgstr "Wollen Sie wirklich das Ziel löschen?"
+msgstr "Wollen Sie das Ziel wirklich löschen?"
 
 #: proso_goals/static/js/app.js:112
 msgid "Cíl byl vytvořen"
